# data-service

./: README.md  docker-compose.yml
local/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.edge  README.md
local/scripts/: tts_table_setup.sql
local/scripts/sql/: app_table_setup.sql  notification_table_setup.sql  user_table_setup.sql
local/src/: CMakeLists.txt  main.cpp
local/src/controller/: app_controller.hpp  controller.hpp  notification_controller.hpp  tts_controller.hpp  user_controller.hpp
local/src/db/: app_client.hpp  notification_client.hpp  tts_client.hpp  user_client.hpp
local/src/service/: user_service.cpp  user_service.h
local/src/service/app/: app_service.cpp  app_service.h
local/src/service/notification/: notification_service.cpp  notification_service.h
local/src/service/tts/: tts_service.cpp  tts_service.h
local/src/service/user/: user_service.cpp  user_service.h
local/src/web/: app_component.hpp
local/src/web/dto/: app_dto.hpp  notification_dto.hpp  page_dto.hpp  status_dto.hpp  tts_dto.hpp  user_dto.hpp
